syntax = "proto3";
package cores;

option go_package = "github.com/snple/beacon/pb/cores;cores";

import "node_message.proto";
import "generic_message.proto";

message NodeListRequest {
    pb.Page page = 1;
    string tags = 2;
}

message NodeListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Node node = 3;
}

message NodeLinkRequest {
    string id = 1;
    sint32 status = 2;
}

message NodePullRequest {
    int64 after = 1;
    uint32 limit = 2;
}

message NodePullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Node node = 3;
}

service NodeService {
    rpc Create(pb.Node) returns (pb.Node) {}
    rpc Update(pb.Node) returns (pb.Node) {}
    rpc View(pb.Id) returns (pb.Node) {}
    rpc Name(pb.Name) returns (pb.Node) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(NodeListRequest) returns (NodeListResponse) {}
    rpc Link(NodeLinkRequest) returns (pb.MyBool) {}
    rpc Destory(pb.Id) returns (pb.MyBool) {}
    rpc Clone(pb.Id) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Node) {}
    rpc Pull(NodePullRequest) returns (NodePullResponse) {}
    rpc Sync(pb.Node) returns (pb.MyBool) {}
}
